--- a/CrowderApp/app/src/main/res/layout/profile_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/profile_fragment.xml
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="TextView"
+        android:text="@string/blank"
         app:layout_constraintBaseline_toBaselineOf="@+id/myPhoneNumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="TextView"
+        android:text="@string/blank"
         app:layout_constraintBaseline_toBaselineOf="@+id/myEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
