--- a/CrowderApp/app/src/main/res/layout/my_experiments_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/my_experiments_fragment.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <ListView
-        android:id="@+id/city_list"
+        android:id="@+id/my_experiment_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
