--- a/CrowderApp/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/CrowderApp/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,15 +3,15 @@
     <item
         android:id="@+id/navigation_all_experiments"
         android:icon="@drawable/baseline_science_24"
-        android:title="Home" />
+        android:title="@string/all_experiments" />
 
     <item
         android:id="@+id/navigation_my_experiments"
         android:icon="@drawable/baseline_favorite_24"
-        android:title="My Experiments" />
+        android:title="@string/my_experiments" />
 
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/baseline_account_circle_24"
-        android:title="Profile" />
+        android:title="@string/profile" />
 </menu>
