--- a/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
@@ -3,19 +3,19 @@
 <LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
     android:layout_width="wrap_content"
-    android:orientation="horizontal" >
+    android:layout_height="40dp"
+    android:orientation="horizontal">
 
 
-        <TextView
-            android:id="@+id/allExpNameText"
-            android:layout_width="175dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Experiment Name"
-            android:textSize="15sp">
-        </TextView>
+    <TextView
+        android:id="@+id/allExpNameText"
+        android:layout_width="175dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:text="Experiment Name"
+        android:textSize="15sp"></TextView>
 
     <CheckBox
         android:id="@+id/subscribedButton"
