--- a/CrowderApp/app/src/main/res/layout/all_experiments_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_fragment.xml
@@ -7,7 +7,9 @@
     <ListView
         android:id="@+id/all_experiment_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingTop="?attr/actionBarSize"
+        android:paddingBottom="?attr/actionBarSize">
 
     </ListView>
 
