Added FAB, started creating of hamburger, starting creation of add experiment fragment

--- a/CrowderApp/app/src/main/res/menu/appbar_menu.xml
+++ b/CrowderApp/app/src/main/res/menu/appbar_menu.xml
@@ -5,7 +5,8 @@
         android:title="Add Experiment"
         android:icon="@drawable/ic_baseline_add_24"
         android:id="@+id/add_experiment_button"
-        app:showAsAction="always">
+        app:showAsAction="never"
+        android:visible="false">
 
     </item>
 
