--- a/CrowderApp/app/src/main/res/layout/activity_main.xml
+++ b/CrowderApp/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,17 @@
             app:itemTextColor="@color/white"
             app:menu="@menu/bottom_navigation_menu"
             />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_city_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_gravity="bottom|end"
+            android:elevation="10dp"
+            android:layout_marginBottom="?attr/actionBarSize"
+            android:backgroundTint="@color/purple_200"
+            app:srcCompat="@android:drawable/ic_input_add" />
 
     </FrameLayout>
 
