--- a/CrowderApp/app/src/main/res/layout/activity_main.xml
+++ b/CrowderApp/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             app:menu="@menu/bottom_navigation_menu"
             />
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/add_city_button"
+            android:id="@+id/add_experiment_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
