--- a/CrowderApp/app/src/main/res/layout/add_experiment_fragment_layout.xml
+++ b/CrowderApp/app/src/main/res/layout/add_experiment_fragment_layout.xml
@@ -6,34 +6,63 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <TextView
+        android:id="@+id/experiment_name_TextView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingLeft="30dp"
+        android:text="@string/experiment_name"
+        android:paddingStart="30dp" />
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            
-        </ImageView>
+    <EditText
+        android:id="@+id/experiment_name_EditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="30dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/experiment_name2" />
 
-        <TextView
-            android:id="@+id/add_experiment_TextView"
-            android:layout_width="105dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="256dp"
-            android:layout_marginRight="256dp"
-            android:text="@string/add_experiment"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/trial_type_TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingLeft="30dp"
+        android:text="@string/trial_type"
+        android:paddingStart="30dp" />
+    <Spinner
+        android:id="@+id/dropdown"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="22dp"
+        android:layout_marginStart="22dp" />
+
+    <CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
+        android:text="Location Required?"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_height="match_parent"
+        />
+
+    <TextView
+        android:id="@+id/min_trials_textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingLeft="30dp"
+        android:paddingStart="30dp"
+        android:text="Minimum Number of Trials" />
+    <EditText
+        android:id="@+id/min_trials_EditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="30dp"
+        android:autofillHints="Number of Trials"
+        android:ems="10"
+        android:inputType="number" />
 </LinearLayout>
