Added listener to listview to test

--- a/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
@@ -21,6 +21,7 @@
         android:id="@+id/subscribedButton"
         android:layout_width="216dp"
         android:layout_height="wrap_content"
-        android:text="Subscribed" />
+        android:text="Subscribed"
+        android:focusable="false"/>
 
 </LinearLayout>
