--- a/CrowderApp/app/src/main/res/layout/measurement_trial.xml
+++ b/CrowderApp/app/src/main/res/layout/measurement_trial.xml
@@ -39,30 +39,28 @@
         android:id="@+id/ave_measurement_value_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="110dp"
-        android:layout_marginRight="110dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginRight="92dp"
+        android:layout_marginBottom="68dp"
         android:text="0"
         app:layout_constraintBottom_toTopOf="@+id/measurement_value_editText"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ave_measurement_textView" />
 
     <TextView
         android:id="@+id/num_measurements_value_textView"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="123dp"
-        android:layout_marginEnd="111dp"
-        android:layout_marginRight="111dp"
         android:layout_marginBottom="30dp"
         android:text="0"
         app:layout_constraintBottom_toTopOf="@+id/ave_measurement_value_textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/num_measurement_textView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/measurement_value_editText"
