--- a/CrowderApp/app/src/main/res/layout/nonnegative_integer_count_trial_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/nonnegative_integer_count_trial_fragment.xml
@@ -21,12 +21,15 @@
         android:id="@+id/num_measurements_value_textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginTop="124dp"
-        android:layout_marginEnd="152dp"
-        android:layout_marginRight="152dp"
+        android:layout_marginBottom="24dp"
         android:text="0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/ave_measurement_value_textView2"
+        app:layout_constraintStart_toEndOf="@+id/num_count_textView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/ave_measurement_textView2"
@@ -41,14 +44,18 @@
 
     <TextView
         android:id="@+id/ave_measurement_value_textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="8dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginEnd="145dp"
+        android:layout_marginRight="145dp"
+        android:layout_marginBottom="76dp"
         android:text="0"
-        app:layout_constraintStart_toEndOf="@+id/ave_measurement_textView2"
-        app:layout_constraintTop_toBottomOf="@+id/num_measurements_value_textView2" />
+        app:layout_constraintBottom_toTopOf="@+id/count_value_editText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/ave_measurement_textView2" />
 
     <EditText
         android:id="@+id/count_value_editText"
