--- a/CrowderApp/app/src/main/res/layout/count_trial_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/count_trial_fragment.xml
@@ -7,33 +7,33 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/countTotal"
+        android:id="@+id/count_total_TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="168dp"
-        android:text="TextView"
+        android:text="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/countIncrement"
+        android:id="@+id/count_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
         android:text="Increment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/countTotal" />
+        app:layout_constraintTop_toBottomOf="@+id/count_total_TextView" />
 
     <Button
-        android:id="@+id/countSave"
+        android:id="@+id/count_save_Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="224dp"
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/countIncrement" />
+        app:layout_constraintTop_toBottomOf="@+id/count_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
