--- a/CrowderApp/app/src/main/res/layout/measurement_trial.xml
+++ b/CrowderApp/app/src/main/res/layout/measurement_trial.xml
@@ -69,7 +69,7 @@
         android:layout_marginTop="70dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:text="Measurement Value"
+        android:hint="Measurement Value"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ave_measurement_textView" />
