--- a/CrowderApp/app/src/main/res/layout/nonnegative_integer_count_trial_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/nonnegative_integer_count_trial_fragment.xml
@@ -70,7 +70,7 @@
         android:layout_marginTop="70dp"
         android:ems="10"
         android:inputType="number"
-        android:hint="Measurement Value"
+        android:hint="Integer Value"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ave_non_neg_textView" />
