--- a/CrowderApp/app/src/main/res/layout/add_experiment_fragment_layout.xml
+++ b/CrowderApp/app/src/main/res/layout/add_experiment_fragment_layout.xml
@@ -65,5 +65,6 @@
         android:layout_marginRight="30dp"
         android:autofillHints="Number of Trials"
         android:ems="10"
+        android:textIsSelectable="true"
         android:inputType="number" />
 </LinearLayout>
