--- a/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
@@ -10,18 +10,18 @@
 
     <TextView
         android:id="@+id/allExpNameText"
-        android:layout_width="175dp"
+        android:layout_width="189dp"
         android:layout_height="20dp"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:text="Experiment Name"
         android:textSize="15sp"></TextView>
 
-    <CheckBox
-        android:id="@+id/subscribedButton"
-        android:layout_width="216dp"
+    <Button
+        android:id="@+id/subscribeButton"
+        android:layout_width="221dp"
         android:layout_height="wrap_content"
-        android:text="Subscribed"
-        android:focusable="false"/>
+        android:layout_weight="1"
+        android:text="Subscribe" />
 
 </LinearLayout>
