--- a/CrowderApp/app/src/main/res/layout/all_experiments_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_fragment.xml
@@ -21,7 +21,7 @@
         </EditText>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/search_btn"
             android:layout_width="102dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
