--- a/CrowderApp/app/src/main/res/layout/all_experiments_search_result.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_search_result.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <CheckBox
+    <Button
         android:id="@+id/search_subscribed"
-        android:layout_width="216dp"
+        android:layout_width="221dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:focusable="false"
-        android:text="Subscribed"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_weight="1"
+        android:text="Subscribe"
         app:layout_constraintBaseline_toBaselineOf="@+id/search_experiment_name"
         app:layout_constraintEnd_toEndOf="parent" />
 
