--- a/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
@@ -5,7 +5,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="40dp"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="horizontal">
+
 
 
     <TextView
