--- a/CrowderApp/app/src/main/res/layout/all_experiments_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_fragment.xml
@@ -32,7 +32,7 @@
         android:id="@+id/all_experiment_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:descendantFocusability="blocksDescendants"
         android:paddingBottom="?attr/actionBarSize" />
 
 </LinearLayout>
