--- a/CrowderApp/app/src/main/res/layout/all_experiments_search_result.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_search_result.xml
@@ -46,6 +46,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         tools:text="RyanWasHere" />
