--- a/CrowderApp/app/src/main/res/layout/profile_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/profile_fragment.xml
@@ -68,6 +68,7 @@
 
     <EditText
         android:id="@+id/profile_phone"
+        android:inputType="phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -78,6 +79,7 @@
 
     <EditText
         android:id="@+id/profile_email"
+        android:inputType="textEmailAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
