--- a/CrowderApp/app/src/main/res/menu/appbar_menu.xml
+++ b/CrowderApp/app/src/main/res/menu/appbar_menu.xml
@@ -11,12 +11,18 @@
             <item android:id="@+id/location_item"
                 android:icon="@drawable/ic_baseline_location_on_24"
                 android:title="Location Heatmap" />
-            <item android:id="@+id/barcode_item"
+            <item android:id="@+id/barcode_scan_item"
                 android:icon="@drawable/ic_baseline_local_bar_24"
-                android:title="Barcodes" />
-            <item android:id="@+id/qr_code_item"
+                android:title="Scan Barcode" />
+            <item android:id="@+id/assign_barcode_item"
+                android:icon="@drawable/ic_baseline_local_bar_24"
+                android:title="Assign Barcode" />
+            <item android:id="@+id/qr_code_scan_item"
                 android:icon="@drawable/ic_baseline_qr_code_24"
-                android:title="QR Codes" />
+                android:title="Scan QR Code" />
+            <item android:id="@+id/qr_code_gen_item"
+                android:icon="@drawable/ic_baseline_qr_code_24"
+                android:title="Generate QR Codes" />
             <item android:id="@+id/comment_item"
                 android:icon="@drawable/ic_baseline_mode_comment_24"
                 android:title="Comments" />
