--- a/CrowderApp/app/src/main/res/layout/location_popup_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/location_popup_fragment.xml
@@ -8,11 +8,13 @@
 
     <TextView
         android:id="@+id/locationPopupText"
-        android:layout_width="251dp"
-        android:layout_height="112dp"
+        android:layout_width="253dp"
+        android:layout_height="47dp"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.621"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499" />
 </androidx.constraintlayout.widget.ConstraintLayout>
