--- a/CrowderApp/app/src/main/res/layout/all_experiments_search_result.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_search_result.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:tag="@string/update_index_tag"
+    >
 
     <Button
         android:id="@+id/search_subscribed"
