Added titles to experiment and some comments/code cleanup

--- a/CrowderApp/app/src/main/res/layout/measurement_trial.xml
+++ b/CrowderApp/app/src/main/res/layout/measurement_trial.xml
@@ -100,4 +100,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/measurement_button_enter" />
 
+    <TextView
+        android:id="@+id/measure_trial_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
+        android:text="Measure Trial"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
