--- a/CrowderApp/app/src/main/res/layout/count_trial_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/count_trial_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/count_total_TextView"
+        android:id="@+id/count_name_TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="168dp"
@@ -25,7 +25,7 @@
         android:text="Increment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/count_total_TextView" />
+        app:layout_constraintTop_toBottomOf="@+id/count_name_TextView" />
 
     <Button
         android:id="@+id/count_save_Button"
@@ -36,4 +36,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/count_button" />
+
+    <TextView
+        android:id="@+id/count_trial_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:text="Count Trial"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
