--- a/CrowderApp/app/src/main/res/layout/nonnegative_integer_count_trial_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/nonnegative_integer_count_trial_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="124dp"
         android:layout_marginBottom="14dp"
-        android:text="Number of Counts: "
+        android:text="@string/number_of_counts"
         app:layout_constraintBottom_toTopOf="@+id/ave_non_neg_textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.413"
@@ -100,5 +100,16 @@
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/non_neg_button_enter" />
+
+    <TextView
+        android:id="@+id/non_neg_trial_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:text="Non Neg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
