Cleaning xml files

--- a/CrowderApp/app/src/main/res/layout/measurement_trial.xml
+++ b/CrowderApp/app/src/main/res/layout/measurement_trial.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="124dp"
         android:layout_marginBottom="14dp"
-        android:text="Number of Measurements: "
+        android:text="@string/number_of_measurements"
         app:layout_constraintBottom_toTopOf="@+id/ave_measurement_textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,12 +23,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
-        android:layout_marginLeft="120dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="3dp"
-        android:layout_marginRight="3dp"
         android:layout_marginBottom="77dp"
-        android:text="Average per measurement:"
+        android:text="@string/average_per_measurement"
         app:layout_constraintBottom_toTopOf="@+id/measurement_value_editText"
         app:layout_constraintEnd_toStartOf="@+id/ave_measurement_value_textView"
         app:layout_constraintHorizontal_bias="0.0"
@@ -40,11 +38,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginEnd="92dp"
-        android:layout_marginRight="92dp"
         android:layout_marginBottom="68dp"
-        android:text="0"
+        android:text="@string/_0"
         app:layout_constraintBottom_toTopOf="@+id/measurement_value_editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ave_measurement_textView" />
@@ -54,10 +50,9 @@
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="123dp"
         android:layout_marginBottom="30dp"
-        android:text="0"
+        android:text="@string/_0"
         app:layout_constraintBottom_toTopOf="@+id/ave_measurement_value_textView"
         app:layout_constraintStart_toEndOf="@+id/num_measurement_textView"
         app:layout_constraintTop_toTopOf="parent" />
@@ -69,17 +64,18 @@
         android:layout_marginTop="70dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:hint="Measurement Value"
+        android:hint="@string/measurement_value"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ave_measurement_textView" />
+        app:layout_constraintTop_toBottomOf="@+id/ave_measurement_textView"
+        android:importantForAutofill="no" />
 
     <Button
         android:id="@+id/measurement_button_enter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="Enter"
+        android:text="@string/enter"
         app:layout_constraintBottom_toTopOf="@+id/measurement_button_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -93,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Save"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -105,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
-        android:text="Measure Trial"
+        android:text="@string/measure_trial"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
