--- a/CrowderApp/app/src/main/res/layout/nonnegative_integer_count_trial_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/nonnegative_integer_count_trial_fragment.xml
@@ -24,12 +24,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
-        android:layout_marginLeft="120dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="3dp"
-        android:layout_marginRight="3dp"
         android:layout_marginBottom="77dp"
-        android:text="Average per Trial:"
+        android:text="@string/average_per_trial"
         app:layout_constraintBottom_toTopOf="@+id/non_neg_value_editText"
         app:layout_constraintEnd_toStartOf="@+id/ave_non_neg_value_textView"
         app:layout_constraintHorizontal_bias="0.0"
@@ -41,11 +39,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginEnd="132dp"
-        android:layout_marginRight="132dp"
         android:layout_marginBottom="68dp"
-        android:text="0"
+        android:text="@string/_0"
         app:layout_constraintBottom_toTopOf="@+id/non_neg_value_editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ave_non_neg_textView" />
@@ -55,10 +51,9 @@
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
         android:layout_marginTop="123dp"
         android:layout_marginBottom="30dp"
-        android:text="0"
+        android:text="@string/_0"
         app:layout_constraintBottom_toTopOf="@+id/ave_non_neg_value_textView"
         app:layout_constraintStart_toEndOf="@+id/non_neg_count_textView"
         app:layout_constraintTop_toTopOf="parent" />
@@ -70,17 +65,18 @@
         android:layout_marginTop="70dp"
         android:ems="10"
         android:inputType="number"
-        android:hint="Integer Value"
+        android:hint="@string/integer_value"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ave_non_neg_textView" />
+        app:layout_constraintTop_toBottomOf="@+id/ave_non_neg_textView"
+        android:importantForAutofill="no" />
 
     <Button
         android:id="@+id/non_neg_button_enter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="Enter"
+        android:text="@string/enter"
         app:layout_constraintBottom_toTopOf="@+id/non_neg_button_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -94,7 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Save"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -106,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:text="Non Neg"
+        android:text="@string/non_neg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
