--- a/CrowderApp/app/src/main/res/layout/questions_list.xml
+++ b/CrowderApp/app/src/main/res/layout/questions_list.xml
@@ -7,6 +7,6 @@
         android:id="@+id/question_TextView"
         android:layout_width="match_parent"
         android:layout_height="43dp"
-        android:text="Question"
-        android:textSize="30dp"/>
+        android:text="@string/question"
+        android:textSize="30sp"/>
 </LinearLayout>
