--- a/CrowderApp/app/src/main/res/layout/reply_fragment.xml
+++ b/CrowderApp/app/src/main/res/layout/reply_fragment.xml
@@ -26,6 +26,7 @@
         android:clickable="true"
         android:elevation="10dp"
         android:focusable="true"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:contentDescription="@string/add_reply" />
 
 </FrameLayout>
