--- a/CrowderApp/app/src/main/res/layout/reply_list.xml
+++ b/CrowderApp/app/src/main/res/layout/reply_list.xml
@@ -13,7 +13,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="25"
-            android:text="Reply"
+            android:text="@string/reply"
             android:textSize="24sp" />
 
         <TextView
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Loading..."
+            android:text="@string/loading"
             android:textColor="#2196F3"
             android:textSize="24sp" />
     </LinearLayout>
