--- a/CrowderApp/app/src/main/res/layout/user_filter_custom_list.xml
+++ b/CrowderApp/app/src/main/res/layout/user_filter_custom_list.xml
@@ -15,7 +15,6 @@
         android:layout_width="189dp"
         android:layout_height="20dp"
         android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
         android:text=""
         android:textSize="15sp"></TextView>
 
@@ -25,6 +24,6 @@
         android:layout_width="195dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Included" />
+        android:text="@string/included" />
 
 </LinearLayout>
