--- a/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
@@ -4,26 +4,51 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="40dp"
+    android:layout_height="60dp"
     android:descendantFocusability="blocksDescendants"
     android:orientation="horizontal">
 
 
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/allExpNameText"
-        android:layout_width="189dp"
-        android:layout_height="20dp"
+        android:layout_width="284dp"
+        android:layout_height="40dp"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:text="Experiment Name"
-        android:textSize="15sp"></TextView>
+        android:textSize="25sp"></TextView>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/minTrials_text"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:text="MinTrials" ></TextView>
+            <TextView
+                android:id="@+id/region_text"
+                android:layout_width="164dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:text="Region" ></TextView>
+        </LinearLayout>
+    </LinearLayout>
 
     <Button
         android:id="@+id/subscribeButton"
-        android:layout_width="221dp"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginTop="5dp"
         android:text="Subscribe" />
 
 </LinearLayout>
