--- a/CrowderApp/app/src/main/res/layout/my_experiments_custom_list.xml
+++ b/CrowderApp/app/src/main/res/layout/my_experiments_custom_list.xml
@@ -4,15 +4,45 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="40dp"
+    android:layout_height="60dp"
     android:orientation="horizontal">
 
 
-    <TextView
-        android:id="@+id/myExpNameText"
-        android:layout_width="400dp"
-        android:layout_height="50dp"
-        android:text="Experiment Name"
-        android:textSize="30sp"></TextView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/myExpNameText"
+            android:layout_width="330dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:text="Experiment Name"
+            android:textSize="25sp"></TextView>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/minTrials_text"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginLeft="30dp"
+                android:text="MinTrials"></TextView>
+
+            <TextView
+                android:id="@+id/region_text"
+                android:layout_width="164dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginLeft="0dp"
+                android:text="Region"></TextView>
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
